--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Filename:   index.html
 -->
 
-/*global $*/
+<!--/*global $*/--!>
 <head>
     <script type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
